--- a/index.html
+++ b/index.html
@@ -1,227 +1,401 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-<meta charset="utf-8">
-<title>Mappa Verona – Farmacie e Medici</title>
+  <meta charset="utf-8">
+  <title>Mappa Verona – Comuni SpG</title>
 
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <!-- Leaflet CSS -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  />
 
-<style>
-html, body {
-  margin: 0;
-  height: 100%;
-  background: #000;
-  font-family: system-ui, sans-serif;
-}
-#map { position:absolute; inset:0; z-index:1; }
+  <style>
+    html, body {
+      margin: 0;
+      height: 100%;
+      background: #000;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      overflow: hidden;
+    }
 
-/* overlay */
-#dark-overlay {
-  position:absolute; inset:0;
-  background: radial-gradient(circle,
-    rgba(0,0,0,.15) 0%,
-    rgba(0,0,0,.4) 55%,
-    rgba(0,0,0,.6) 100%);
-  pointer-events:none;
-  z-index:2;
-}
+    /* MAPPA */
+    #map {
+      position: absolute;
+      inset: 0;
+      z-index: 1;
+      background: #050505;
+    }
 
-/* HUD */
-#hud {
-  position: fixed;
-  top: 14px;
-  left: 14px;
-  z-index: 9999;
-  width: 360px;
-  padding: 14px;
-  background: rgba(8,8,8,.95);
-  border-left: 4px solid #00ff9c;
-  box-shadow: 0 0 22px rgba(0,0,0,.8);
-  color:#fff;
-}
+    /* HUD / PANNELLO SINISTRA */
+    #hud {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      z-index: 9999;
+      padding: 14px 16px 12px;
+      background: rgba(5, 5, 5, 0.93);
+      border-left: 4px solid #00ff9c;
+      min-width: 280px;
+      max-width: 320px;
+      pointer-events: auto; /* i pulsanti devono essere cliccabili */
+      box-shadow: 0 0 18px rgba(0, 0, 0, 0.8);
+    }
 
-.hud-title { font-size:18px; font-weight:650; }
-.hud-sub { font-size:13px; color:#bfbfbf; margin-top:6px; }
+    .hud-title {
+      font-size: 18px;
+      font-weight: 650;
+      letter-spacing: 0.08em;
+      color: #ffffff;
+      line-height: 1.3;
+      text-transform: uppercase;
+    }
 
-.section {
-  margin-top:12px;
-}
-.section h4 {
-  margin:0 0 6px;
-  font-size:12px;
-  color:#9ef5d9;
-  letter-spacing:.8px;
-  text-transform:uppercase;
-}
+    .hud-sub {
+      margin-top: 6px;
+      font-size: 13px;
+      color: #b3b3b3;
+      line-height: 1.35;
+    }
 
-/* elenco */
-.list {
-  max-height:180px;
-  overflow-y:auto;
-  background:#0f0f0f;
-  padding:6px;
-}
-.item {
-  padding:6px;
-  border-bottom:1px solid rgba(255,255,255,.05);
-  cursor:pointer;
-}
-.item:hover { background:#1a1a1a; }
+    .hud-meta {
+      margin-top: 10px;
+      font-size: 11px;
+      text-transform: uppercase;
+      letter-spacing: 0.12em;
+      color: #7dd9bb;
+    }
 
-.badge {
-  display:inline-block;
-  font-size:10px;
-  padding:2px 6px;
-  margin-left:6px;
-}
-.accetta { background:#00ff9c; color:#000; }
-.in_trattativa { background:#4da6ff; }
-.da_contattare { background:#ffaa00; color:#000; }
-.rifiuta { background:#ff4d4d; }
+    .hud-buttons {
+      margin-top: 10px;
+      display: flex;
+      gap: 6px;
+      flex-wrap: wrap;
+    }
 
-.marker-dot {
-  width:12px; height:12px;
-  border-radius:50%;
-  display:inline-block;
-}
-.marker-triangle {
-  width:0; height:0;
-  border-left:7px solid transparent;
-  border-right:7px solid transparent;
-  border-bottom:12px solid;
-  display:inline-block;
-}
-.private { border-color:transparent; }
-.comunale { }
+    .hud-btn {
+      border: 1px solid #00ff9c;
+      background: #021b14;
+      color: #e5fff7;
+      font-size: 11px;
+      padding: 4px 8px;
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
+      cursor: pointer;
+    }
 
-/* marker styles */
-.farmacia-accetta { background:#00ff9c; border-bottom-color:#00ff9c; }
-.farmacia-in_trattativa { background:#4da6ff; border-bottom-color:#4da6ff;}
-.farmacia-da_contattare { background:#ffaa00; border-bottom-color:#ffaa00;}
-.farmacia-rifiuta { background:#ff4d4d; border-bottom-color:#ff4d4d;}
+    .hud-btn:hover {
+      background: #00ff9c;
+      color: #00110b;
+    }
 
-.label-comune {
-  color:#fff;
-  font-size:11px;
-  text-shadow:0 0 6px #000;
-  pointer-events:none;
-}
-</style>
+    .hud-section {
+      margin-top: 10px;
+      padding-top: 8px;
+      border-top: 1px solid #202020;
+      font-size: 12px;
+      color: #cccccc;
+      max-height: 160px;
+      overflow-y: auto;
+    }
+
+    .hud-section h4 {
+      margin: 0 0 4px;
+      font-size: 12px;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
+      color: #00ff9c;
+    }
+
+    #referenti-list {
+      list-style: none;
+      padding-left: 0;
+      margin: 0;
+    }
+
+    #referenti-list li {
+      margin-bottom: 3px;
+      color: #ffffff;
+    }
+
+    #referenti-list .orfano {
+      color: #ff6b6b;
+      font-style: italic;
+    }
+
+    /* ETICHETTE COMUNI SULLA MAPPA */
+    .label-comune {
+      color: rgba(240, 240, 240, 0.9);
+      font-size: 11px;
+      font-weight: 500;
+      white-space: nowrap;
+      text-shadow:
+        0 0 4px rgba(0, 0, 0, 0.95),
+        0 0 8px rgba(0, 0, 0, 0.9);
+      pointer-events: none;
+    }
+
+    /* Cursore mano sui poligoni */
+    .leaflet-interactive {
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
 
 <div id="map"></div>
-<div id="dark-overlay"></div>
 
 <div id="hud">
-  <div class="hud-title" id="hud-title">Provincia di Verona</div>
-  <div class="hud-sub">Seleziona un comune</div>
-
-  <div class="section">
-    <h4>Farmacie del comune</h4>
-    <div id="farmacieList" class="list">—</div>
+  <div class="hud-title">Provincia di Verona</div>
+  <div class="hud-sub">
+    Vista generale — seleziona un comune sulla mappa.
+  </div>
+  <div class="hud-meta" id="hud-meta">
+    Comuni mappati: —
   </div>
 
-  <div class="section">
-    <h4>Medici di base / Studi</h4>
-    <div id="mediciList" class="list">—</div>
+  <div class="hud-buttons">
+    <button class="hud-btn" id="btn-add-ref">Aggiungi referente</button>
+    <button class="hud-btn" id="btn-toggle-ref">Vedi referenti</button>
+  </div>
+
+  <div class="hud-section" id="referenti-panel" style="display:none;">
+    <h4>Referenti territoriali</h4>
+    <ul id="referenti-list"></ul>
   </div>
 </div>
 
+<!-- Leaflet JS -->
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-/* ===== MOCK DATABASE ===== */
-const farmacie = [
-  { nome:"Farmacia Centrale", comune:"Verona", lat:45.438, lng:10.992, tipo:"privata", stato:"accetta", note:"Banco dedicato" },
-  { nome:"Farmacia San Zeno", comune:"Verona", lat:45.443, lng:10.980, tipo:"comunale", stato:"in_trattativa" },
-  { nome:"Farmacia Borgo Roma", comune:"Verona", lat:45.389, lng:10.982, tipo:"privata", stato:"da_contattare" }
-];
+  // =========================
+  // MAPPA BASE
+  // =========================
+  const map = L.map('map', {
+    zoomControl: true,
+    attributionControl: false
+  }).setView([45.43, 10.99], 10); // zoom leggermente più vicino
 
-const medici = [
-  { nome:"Dr. Rossi", comune:"Verona", lat:45.441, lng:10.995 },
-  { nome:"Studio Associato Borgo Trento", comune:"Verona", lat:45.447, lng:10.988 }
-];
+  // TILE DARK (mappa vera sotto, non più rettangolo nero)
+  L.tileLayer(
+    'https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
+    {
+      maxZoom: 18,
+      subdomains: 'abcd'
+    }
+  ).addTo(map);
 
-let farmaciLayers = L.layerGroup();
-let mediciLayers = L.layerGroup();
+  let selectedLayer = null;
+  let labels = [];
+  let referentiVisibili = false;
 
-const map=L.map('map',{attributionControl:false})
-  .setView([45.43,10.99],11);
+  // memoria referenti: { "Comune di Verona": ["Nome 1", "Nome 2"] ... }
+  const referentiPerComune = {
+    // esempio iniziale
+    "Verona": ["Vincenzo Russo (esempio)"]
+  };
 
-L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
-  {maxZoom:19}).addTo(map);
+  const hudTitle = document.querySelector('.hud-title');
+  const hudSub   = document.querySelector('.hud-sub');
+  const hudMeta  = document.getElementById('hud-meta');
+  const refPanel = document.getElementById('referenti-panel');
+  const refList  = document.getElementById('referenti-list');
+  const btnAdd   = document.getElementById('btn-add-ref');
+  const btnToggle= document.getElementById('btn-toggle-ref');
 
-farmaciLayers.addTo(map);
-mediciLayers.addTo(map);
+  let comuniLayer = null;
 
-function mostraFarmacie(comune){
-  farmaciLayers.clearLayers();
-  document.getElementById('farmacieList').innerHTML='';
-  farmacie.filter(f=>f.comune===comune).forEach(f=>{
-    const iconHTML = f.tipo==='privata'
-      ? `<span class="marker-dot farmacia-${f.stato}"></span>`
-      : `<span class="marker-triangle farmacia-${f.stato}"></span>`;
-
-    const m=L.marker([f.lat,f.lng],{
-      icon:L.divIcon({html:iconHTML,iconSize:[14,14],className:''})
-    }).bindPopup(`<strong>${f.nome}</strong><br/>${f.tipo}<br/>${f.stato}`);
-    farmaciLayers.addLayer(m);
-
-    const row=document.createElement('div');
-    row.className='item';
-    row.innerHTML=`${iconHTML} ${f.nome}
-      <span class="badge ${f.stato}">${f.stato}</span>`;
-    row.onclick=()=>{
-      map.setView([f.lat,f.lng],16);
-      m.openPopup();
-    };
-    document.getElementById('farmacieList').appendChild(row);
-  });
-}
-
-function mostraMedici(comune){
-  mediciLayers.clearLayers();
-  document.getElementById('mediciList').innerHTML='';
-  medici.filter(m=>m.comune===comune).forEach(m=>{
-    const marker=L.marker([m.lat,m.lng],{
-      icon:L.divIcon({html:"⚕️",iconSize:[20,20],className:""})
-    }).bindPopup(`<strong>${m.nome}</strong>`);
-    mediciLayers.addLayer(marker);
-
-    const row=document.createElement('div');
-    row.className='item';
-    row.textContent='⚕️ '+m.nome;
-    row.onclick=()=>{
-      map.setView([m.lat,m.lng],16);
-      marker.openPopup();
-    };
-    document.getElementById('mediciList').appendChild(row);
-  });
-}
-
-/* ==== COMUNI ==== */
-fetch('data/comuni_verona.json')
-.then(r=>r.json())
-.then(data=>{
-  L.geoJSON(data,{
-    style:{color:'#00ff9c',weight:1,fillOpacity:0},
-    onEachFeature:(f,l)=>{
-      const nome=f.properties.nome||f.properties.DENOM_COM||'Comune';
-      const c=l.getBounds().getCenter();
-      L.marker(c,{
-        icon:L.divIcon({className:'label-comune',html:nome}),
-        interactive:false
+  // =========================
+  // CARICA COMUNI
+  // =========================
+  fetch('data/comuni_verona.json')
+    .then(r => r.json())
+    .then(data => {
+      // OMBRA / PROFONDITÀ leggera
+      L.geoJSON(data, {
+        style: {
+          color: '#000',
+          weight: 4,
+          opacity: 0.35
+        }
       }).addTo(map);
 
-      l.on('click',()=>{
-        map.fitBounds(l.getBounds(),{padding:[40,40]});
-        document.getElementById('hud-title').innerText='Comune di '+nome;
-        mostraFarmacie(nome);
-        mostraMedici(nome);
+      comuniLayer = L.geoJSON(data, {
+        style: {
+          color: '#00ff9c',
+          weight: 1,
+          opacity: 0.9,
+          fillOpacity: 0
+        },
+        onEachFeature: (feature, layer) => {
+          const nome =
+            feature.properties.nome ||
+            feature.properties.name ||
+            feature.properties.DENOM_COM ||
+            'Comune';
+
+          // ETICHETTA (zoom OUT)
+          const center = layer.getBounds().getCenter();
+          const label = L.marker(center, {
+            interactive: false,
+            icon: L.divIcon({
+              className: 'label-comune',
+              html: nome,
+              iconSize: [120, 16]
+            })
+          });
+          labels.push(label);
+          label.addTo(map);
+
+          // HOVER
+          layer.on('mouseover', () => {
+            if (layer !== selectedLayer) {
+              layer.setStyle({ color:'#ffffff', weight:2 });
+            }
+          });
+
+          layer.on('mouseout', () => {
+            if (layer !== selectedLayer) {
+              layer.setStyle({ color:'#00ff9c', weight:1 });
+            }
+          });
+
+          // CLICK: selezione comune
+          layer.on('click', () => {
+            selezionaComune(layer, nome);
+          });
+        }
+      }).addTo(map);
+
+      // adatta vista alla provincia
+      map.fitBounds(comuniLayer.getBounds());
+
+      // aggiorna contatore comuni
+      try {
+        hudMeta.textContent = 'Comuni mappati: ' + comuniLayer.getLayers().length;
+      } catch(e) {
+        hudMeta.textContent = 'Comuni mappati: —';
+      }
+
+      // gestione visibilità etichette
+      function updateLabels() {
+        const z = map.getZoom();
+        labels.forEach(l => {
+          if (z <= 10.5) {
+            if (!map.hasLayer(l)) l.addTo(map);
+          } else {
+            if (map.hasLayer(l)) map.removeLayer(l);
+          }
+        });
+      }
+
+      map.on('zoomend', updateLabels);
+      updateLabels();
+    });
+
+  // =========================
+  // FUNZIONE: seleziona comune
+  // =========================
+  function selezionaComune(layer, nome) {
+    // reset selezione precedente
+    if (selectedLayer && selectedLayer !== layer) {
+      selectedLayer.setStyle({ color:'#00ff9c', weight:1 });
+    }
+
+    selectedLayer = layer;
+    layer.setStyle({ color:'#ffffff', weight:3 });
+
+    map.fitBounds(layer.getBounds(), { padding:[40,40] });
+
+    hudTitle.textContent = 'Comune di ' + nome;
+    aggiornaTestoSub(nome);
+    if (referentiVisibili) {
+      mostraReferenti(nome);
+    }
+  }
+
+  // =========================
+  // TESTO SUB IN BASE AI REFERENTI
+  // =========================
+  function aggiornaTestoSub(nomeComune) {
+    const lista = referentiPerComune[nomeComune] || [];
+    if (!lista.length) {
+      hudSub.textContent = 'Nessun referente — ⚠️ Comune orfano';
+    } else {
+      hudSub.textContent = 'Referenti presenti: ' + lista.length;
+    }
+  }
+
+  // =========================
+  // MOSTRA/NASCONDI REFERENTI
+  // =========================
+  function mostraReferenti(nomeComune) {
+    refList.innerHTML = '';
+    const lista = referentiPerComune[nomeComune] || [];
+
+    if (!lista.length) {
+      const li = document.createElement('li');
+      li.textContent = '⚠️ Nessun referente (comune orfano)';
+      li.classList.add('orfano');
+      refList.appendChild(li);
+    } else {
+      lista.forEach(nome => {
+        const li = document.createElement('li');
+        li.textContent = nome;
+        refList.appendChild(li);
       });
     }
-  }).addTo(map);
-});
+  }
+
+  // =========================
+  // BOTTONI HUD
+  // =========================
+
+  // Aggiungi referente
+  btnAdd.addEventListener('click', () => {
+    if (!selectedLayer) {
+      alert('Seleziona prima un comune sulla mappa.');
+      return;
+    }
+
+    const nomeComune = hudTitle.textContent.replace('Comune di ', '');
+    const nuovo = prompt('Inserisci il tuo nome come referente per ' + nomeComune + ':');
+    if (!nuovo) return;
+
+    if (!referentiPerComune[nomeComune]) {
+      referentiPerComune[nomeComune] = [];
+    }
+    referentiPerComune[nomeComune].push(nuovo.trim());
+
+    aggiornaTestoSub(nomeComune);
+    if (referentiVisibili) {
+      mostraReferenti(nomeComune);
+    }
+  });
+
+  // Vedi / nascondi referenti
+  btnToggle.addEventListener('click', () => {
+    referentiVisibili = !referentiVisibili;
+
+    if (referentiVisibili) {
+      btnToggle.textContent = 'Nascondi referenti';
+      refPanel.style.display = 'block';
+
+      const nomeComune = hudTitle.textContent.replace('Comune di ', '');
+      if (nomeComune && nomeComune !== 'Provincia di Verona') {
+        mostraReferenti(nomeComune);
+      } else {
+        // nessun comune selezionato
+        refList.innerHTML = '';
+        const li = document.createElement('li');
+        li.textContent = 'Seleziona un comune per vedere i referenti.';
+        refList.appendChild(li);
+      }
+    } else {
+      btnToggle.textContent = 'Vedi referenti';
+      refPanel.style.display = 'none';
+    }
+  });
 </script>
 
 </body>
